# HARSIS

./: README.md
HARSIS/: CMakeLists.txt  Makefile  README.md  harsis_qt.pro  moc_csv_aktarici.cpp  moc_doktor_dialog.cpp  moc_doktor_model.cpp  moc_hasta_dialog.cpp  moc_hasta_model.cpp  moc_hatirlatma_servisi.cpp  moc_istemci.cpp  moc_main_window.cpp  moc_predefs.h  moc_randevu_dialog.cpp  moc_randevu_model.cpp  moc_rapor_uretici.cpp  moc_sunucu.cpp  özet.md
HARSIS/harsis_qt.app/Contents/: Info.plist
HARSIS/harsis_qt.app/Contents/MacOS/: harsis_qt
HARSIS/include/: csv_aktarici.h  depo.h  doktor_dialog.h  doktor_model.h  hasta_dialog.h  hasta_model.h  hatirlatma_servisi.h  istemci.h  main_window.h  randevu_dialog.h  randevu_model.h  rapor_uretici.h  sunucu.h  varliklar.h
HARSIS/src/: csv_aktarici.cpp  doktor_dialog.cpp  doktor_model.cpp  hasta_dialog.cpp  hasta_model.cpp  hatirlatma_servisi.cpp  istemci.cpp  main.cpp  main_qt.cpp  main_window.cpp  randevu_dialog.cpp  randevu_model.cpp  rapor_uretici.cpp  sunucu.cpp
